<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.LoginPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_20dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_200dp"
            android:src="@drawable/logohorizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/edittextbackgrnd"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/nameET"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:paddingLeft="@dimen/_8dp"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/edittextbackgrnd"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:paddingLeft="@dimen/_8dp"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp" />

        <Button
            android:id="@+id/loginBTN"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/buttonbackground"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />
    </LinearLayout>

</layout>